--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "firebase": "^10.3.1",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
