--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "composite": true,
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -18,7 +19,7 @@
         "name": "next"
       }
     ],
-    "paths": {
+    "paths": {  
       "@/*": ["./src/*"]
     }
   },
