--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
