--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="694470139934"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="in-an-hung-nguyet.appspot.com"
 NEXT_PUBLIC_FIREBASE_PROJECT_ID="in-an-hung-nguyet"
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="in-an-hung-nguyet.firebaseapp.com"
+
+NEXT_PUBLIC_MONGODB_URL = "mongodb+srv://kynye:6ZuybW1fTJ6XmcAZ@cluster0.vwsjky3.mongodb.net/inanhungnguyet"
