--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "firebase": "^10.3.1",
-    "next": "13.4.19",
+    "mongoose": "^7.6.3",
+    "next": "^13.5.6",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
