--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID="in-an-hung-nguyet"
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="in-an-hung-nguyet.firebaseapp.com"
 
 NEXT_PUBLIC_MONGODB_URL = "mongodb+srv://kynye:6ZuybW1fTJ6XmcAZ@cluster0.vwsjky3.mongodb.net/inanhungnguyet"
+
+BASE_URL = "http://localhost:3000/"
