--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="in-an-hung-nguyet.firebaseapp.com"
 
 NEXT_PUBLIC_MONGODB_URL = "mongodb+srv://kynye:6ZuybW1fTJ6XmcAZ@cluster0.vwsjky3.mongodb.net/inanhungnguyet"
 
-BASE_URL = "http://localhost:3000/"
+BASE_URL = "https://inanhungnguyet.vercel.app/"
