--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "encoding": "^0.1.13",
     "firebase": "^10.3.1",
     "mongoose": "^7.6.3",
     "next": "^13.5.6",
