--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="in-an-hung-nguyet.appspot.com"
 NEXT_PUBLIC_FIREBASE_PROJECT_ID="in-an-hung-nguyet"
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="in-an-hung-nguyet.firebaseapp.com"
 
-NEXT_PUBLIC_BASE_URL = "https://inanhungnguyet-api.vercel.app/"
+NEXT_PUBLIC_BASE_URL = "https://hungnguyet-api.vercel.app/api/v2/"
