--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "encoding": "^0.1.13",
     "firebase": "^10.3.1",
     "next": "^13.5.6",
+    "next-intl": "^3.5.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
