--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
     "sweetalert2": "^11.7.32",
     "swiper": "^10.2.0",
